atvkubehomolog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homolog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-homolog
  namespace: homolog
  labels:
    app: front-end-homolog
spec:
  selector:
    matchLabels:
      app: front-end-homolog
  replicas: 2
  template:
    metadata:
      labels:
        app: front-end-homolog
    spec:
      containers:
       - name: nginx
         image: amandakelly0/fronthomolog
         ports:
         - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment-homolog
  namespace: homolog
  labels:
    app: back-end-homolog
spec:
  selector:
    matchLabels:
      app: back-end-homolog
  replicas: 1
  template:
    metadata:
      labels:
        app: back-end-homolog
    spec:
      containers:
        - name: node
          image: amandakelly0/backhomolog1:latest
          command: ["sh", "-c", "git pull && npm install && node index.js"]
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: homolog
spec:
  type: ClusterIP
  selector:
    app: back-end-homolog
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: homolog
spec:
  type: ClusterIP
  selector:
    app: front-end-homolog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-primario-homolog
  namespace: homolog
spec:
  ingressClassName: nginx
  rules:
  - host: homolog.10.48.10.146.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /dados # Defina o caminho para acessar o backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
